# norskdata-ndfs

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
.github/workflows/: release.yml
docs/: BLOCK-IO-SEAM.md  HANDOFF-BLOCK-IO-SEAM.md  KERNEL-VERIFIED-CORRECTIONS.md  NDFS-FORMAT.md  NDFS-VALIDATION-PLAN.md  SINTRAN-INITIAL-COMMANDS-SPEC.md  XAT-FIELD-EXTENSION-SPEC.md
ndfs-c/: CMakeLists.txt  README.md
ndfs-c/include/ndfs/: bit_file.h  block_io.h  block_pointer.h  boot_loader.h  filesystem.h  image_creator.h  master_block.h  nd_time.h  ndfs.h  object_entry.h  parity.h  sintran.h  types.h  user_entry.h  user_friend.h  wildmatch.h  xat.h
ndfs-c/src/: backend_stdio.c  bit_file.c  block_pointer.c  boot_loader.c  endian_util.c  endian_util.h  filesystem.c  image_creator.c  master_block.c  nd_time.c  ndfs_name.c  ndfs_name.h  object_entry.c  parity.c  sintran.c  user_entry.c  user_friend.c  wildmatch.c  xat.c
ndfs-c/tests/: test_backend_stdio.c  test_bit_file.c  test_block_pointer.c  test_boot_loader.c  test_endian.c  test_filesystem.c  test_framework.h  test_golden.c  test_image_creator.c  test_main.c  test_master_block.c  test_nd_time.c  test_object_entry.c  test_parity.c  test_sintran.c  test_user_entry.c  test_wildmatch.c  test_write_comprehensive.c  test_xat.c  test_xat_copy.c
ndfs-c/tools/ndtool/: README.md  cmd_chmod.c  cmd_create.c  cmd_delete.c  cmd_extract.c  cmd_info.c  cmd_list.c  cmd_put.c  cmd_shell.c  cmd_stat.c  cmd_user.c  ndtool.c  ndtool.h  parity.c  parity.h
ndfs-py/: README.md  pyproject.toml
ndfs-py/src/ndfs/: __init__.py  access_control.py  access_permissions.py  bit_file.py  block_pointer.py  boot_loader.py  constants.py  endian.py  filesystem.py  image_creator.py  master_block.py  nd_time.py  ndfs_name.py  object_entry.py  object_file.py  parity.py  sintran.py  types.py  user_entry.py  user_file.py  user_friend.py  wildmatch.py  xat.py
ndfs-py/tests/: conftest.py  test_access_control.py  test_access_permissions.py  test_bit_file.py  test_block_pointer.py  test_boot_loader.py  test_endian.py  test_filesystem.py  test_golden.py  test_image_creator.py  test_master_block.py  test_nd_time.py  test_ndfs_name.py  test_object_directory_growth.py  test_object_entry.py  test_parity.py  test_sintran.py  test_sparse_files.py  test_stress.py  test_subindexed_files.py  test_user_entry.py  test_user_friend.py  test_user_management.py  test_wildmatch.py  test_write_operations.py  test_write_persistence.py  test_xat.py  test_xat_copy_across.py
ndfs-py/tests/fixtures/: empty.ndfs  withfiles.ndfs
ndfs-ts/: README.md  package.json  tsconfig.json
ndfs-ts/src/: access-control.ts  access-permissions.ts  bit-file.ts  block-pointer.ts  boot-loader.ts  constants.ts  endian.ts  image-creator.ts  index.ts  master-block.ts  nd-time.ts  ndfs-filesystem.ts  ndfs-name.ts  object-entry.ts  object-file.ts  parity.ts  sintran.ts  types.ts  user-entry.ts  user-file.ts  user-friend.ts  wildmatch.ts  xat.ts
ndfs-ts/tests/: access-control.test.ts  access-permissions.test.ts  bit-file.test.ts  block-pointer.test.ts  boot-loader.test.ts  endian.test.ts  golden.test.ts  image-creator.test.ts  master-block.test.ts  nd-time.test.ts  ndfs-filesystem.test.ts  ndfs-name.test.ts  object-entry.test.ts  object-file-subindexed-growth.test.ts  parity.test.ts  sintran.test.ts  sparse-files.test.ts  stress.test.ts  user-entry.test.ts  user-friend.test.ts  user-management.test.ts  wildmatch.test.ts  write-operations.test.ts  write-persistence.test.ts  xat-copy-across.test.ts  xat.test.ts
