[project]
name = "norskdata-ndfs"
version = "0.1.0"
description = "NDFS (Norsk Data File System) read/write library for Sintran-III disk images"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ronny Hansen"}]
requires-python = ">=3.9"
keywords = ["ndfs", "norsk-data", "sintran", "filesystem", "retro", "disk-image"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Filesystems",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
line-length = 100
